# docgl-sdks

./: README.md
go/: README.md  client.go  go.mod  types.go
go/test-app/: main.go
python/: README.md  pyproject.toml
python/docgl/: __init__.py  client.py  types.py
python/test-app/: main.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: client.ts  index.ts  types.ts
typescript/test-app/: index.ts
