[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docgl"
version = "0.1.0"
description = "Official Python SDK for the Docgl document generation API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["docgl", "pdf", "sdk", "document", "generation"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["docgl"]
